--- a/404.html
+++ b/404.html
@@ -1,78 +1,28 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>404 | Page not found.</title>
-
-  <style type="text/css">
-    body {
-      padding: 30px 20px;
-      font-family: -apple-system, BlinkMacSystemFont,
-        "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-        "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-      color: #727272;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 500px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      margin: 0 0 40px;
-      font-size: 60px;
-      line-height: 1;
-      color: #252427;
-      font-weight: 700;
-    }
-
-    h2 {
-      margin: 100px 0 0;
-      font-size: 20px;
-      font-weight: 600;
-      letter-spacing: 0.1em;
-      color: #A299AC;
-      text-transform: uppercase;
-    }
-
-    p {
-      font-size: 16px;
-      margin: 1em 0;
-    }
-
-    .go-back a {
-      display: inline-block;
-      margin-top: 3em;
-      padding: 10px;
-      color: #1B1A1A;
-      font-weight: 700;
-      border: solid 2px #e7e7e7;
-      text-decoration: none;
-      font-size: 16px;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-    }
-
-    .go-back a:hover {
-      border-color: #1B1A1A;
-    }
-
-    @media screen and (min-width: 768px) {
-      body {
-        padding: 50px;
-      }
-    }
-
-    @media screen and (max-width: 480px) {
-      h1 {
-        font-size: 48px;
-      }
-    }
-  </style>
+	<title>404 | Page not found.</title>
+	<link rel="shortcut icon" type="image/jpg" href="assets/img/logo.png">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="HTML5 website">
+	<meta name="keywords" content="global, template, html, sass, jquery">
+	<meta name="author" content="Alex">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 <body>
+
+	<!-- notification for small viewports and landscape oriented smartphones -->
+	<div class="device-notification">
+		<a class="device-notification--logo" href="#0">
+			<img src="assets/img/logo.png" alt="1337sec.inc">
+    <p>1337sec.inc</p>
+  </a>
+  <p class="device-notification--message">We request you orient your device to portrait or find a larger screen.</p>
+</div>
+
 
 <div class="container">
   <a href="https://0x61lex.github.io" class="brand"></a>
@@ -82,8 +32,18 @@
 
   <p>We’re sorry but it appears that we can’t find the page you were looking for. Usually this occurs because of a page that previously existed was removed or you’ve mistyped the address.</p>
 
-  <span class="go-back"><a href="/">Go back</a></span>
+<button><a href="/">Go back
+<span class="btn-background">
+  </a> <span class="btn-background"></span> </button></div>
 </div>
 
-</body>
-</html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
+<script src="assets/js/functions-min.js"></script>
+<!-- <script> setInterval(function() {
+delete document.getElementById("c0a3a67f3b58f48fa49856d3ae7251585");console.log('removed')
+}, 500);</script> -->
+
+
+</body></html>
