--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Alex">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -17,7 +14,7 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" alt="1337sec.inc">
-    <p>1337sec.inc</p>
+    <p>0x61.inc</p>
   </a>
   <p class="device-notification--message">We request you orient your device to portrait or find a larger screen.</p>
 </div>
@@ -29,7 +26,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="1337sec.inc">
-            <p>1337sec.inc</p>
+            <p>0x61.inc</p>
           </a>
           <button class="header--cta cta">Hire Me</button>
           <div class="header--nav-toggle">
@@ -50,7 +47,7 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>Alex<br>Design<br></h1>
-                <button class="cta">Secret
+                <button class="cta">Hire me
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -63,7 +60,7 @@
               <div class="intro--options">
                 <a href="/about-me.html">
                   <h3>About Me</h3>
-                  <p>1337 developper and has a mega schlong</p>
+                  <p>With strong communication skills, volunteer experience, and a drive to succeed, I am seeking a challenge at a dynamic company that values and engages its employees.</p>
                 </a>
                 <a href="#0">
                   <h3>Why</h3>
@@ -71,7 +68,7 @@
                 </a>
                 <a href="#0">
                   <h3>Important</h3>
-                  <p>pp = big</p>
+                  <p>Contact information and other personl information will require a password to access the password will be provided on the documents that you have received if you are authorized personnel</p>
                 </a>
               </div>
             </div>
@@ -84,7 +81,7 @@
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Node.js">
+                        <img src="https://cdn.iconscout.com/icon/free/png-512/javascript-2653297-2202969.png" alt="Node.js">
                       </div>
                       <p class="slider--item-title">Node.js</p>
                       <p class="slider--item-description">Click to view some of my Node.js projects</p>
@@ -93,19 +90,19 @@
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Exploits">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/document-edit-2653323-2202995.png" alt="Exploits">
                       </div>
-                      <p class="slider--item-title">Exploits</p>
-                      <p class="slider--item-description">Click to view some exploits I have found</p>
+                      <p class="slider--item-title">Website</p>
+                      <p class="slider--item-description">Click to view the source code of this website</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://github.com/0x61lex/0x61lex.github.io">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="filler">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/port-2653282-2202954.png" alt="API's">
                       </div>
-                      <p class="slider--item-title">filler</p>
-                      <p class="slider--item-description">idk what to put here lol</p>
+                      <p class="slider--item-title">API's</p>
+                      <p class="slider--item-description">Click to view a list of different API's that I am currently working on</p>
                     </a>
                   </li>
                 </ul>
@@ -162,14 +159,14 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>1337sec Headquaters</p>
-                    <a href="mailto:boiscuffed@gmail.com">boiscuffed@gmail.com</a>
-                    <a href="tel:+1999999999">+1(filler number here)</a>
+                    <p>0x61 Headquaters</p>
+                    <a href="mailto:filler@gmail.com">(filler email here)</a>
+                    <a href="tel:+1999999999">(filler number here)</a>
                   </div>
                   <ul class="modal--options">
                     <li><a href="#0">filler</a></li>
                     <li><a href="#0">more filler</a></li>
-                    <li><a href="mailto:boiscuffed@gmail.com">Contact Me</a></li>
+                    <li><a href="mailto:filler(dont send a email to this address)@gmail.com">Contact Me</a></li>
                   </ul>
                 </div>
               </div>
@@ -177,7 +174,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>Here you can send me information on different projects & jobs you would like me to do</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
