--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </a>
                 <a href="#0">
                   <h3>Why</h3>
-                  <p>opportunity</p>
+                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies</p>
                 </a>
                 <a href="#0">
                   <h3>Important</h3>
@@ -79,7 +79,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://github.com/0x61lex/">
                       <div class="slider--item-image">
                         <img src="https://cdn.iconscout.com/icon/free/png-512/javascript-2653297-2202969.png" alt="Node.js">
                       </div>
@@ -97,7 +97,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="https://github.com/0x61lex/0x61lex.github.io">
+                    <a href="https://github.com/0x61lex/">
                       <div class="slider--item-image">
                         <img src="https://cdn.iconscout.com/icon/free/png-256/port-2653282-2202954.png" alt="API's">
                       </div>
