--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="1337sec.inc">
+            <img src="assets/img/logo.png" alt="0x61.inc">
             <p>0x61.inc</p>
           </a>
           <button class="header--cta cta">Hire Me</button>
@@ -55,7 +55,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/IMG_4483.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="/about-me.html">
