--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="https://cdn.iconscout.com/icon/free/png-256/document-edit-2653323-2202995.png" alt="Exploits">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/document-edit-2653323-2202995.png" alt="Website">
                       </div>
                       <p class="slider--item-title">Website</p>
                       <p class="slider--item-description">Click to view the source code of this website</p>
