--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://github.com/0x61lex/0x61lex.github.io">
                       <div class="slider--item-image">
                         <img src="https://cdn.iconscout.com/icon/free/png-256/document-edit-2653323-2202995.png" alt="Website">
                       </div>
