--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
             <li><span>Projects</span></li>
-            <li><span>Shop</span></li>
+            <li><span>Roadmap</span></li>
             <li><span>Contact</span></li>
             <li><span>Hire Me</span></li>
           </ul>
@@ -129,7 +129,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>Shop</h2>
+                <h2>Roadmap</h2>
                 <a href="/shop.html">Expand
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -143,13 +143,13 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Premium API</h3>
+                  <h3>How, When & Why?</h3>
                 </a>
                 <a href="#0">
-                  <h3>Personal VPS/VPN</h3>
+                  <h3>Key Concepts</h3>
                 </a>
                 <a href="#0">
-                  <h3>Account Automation</h3>
+                  <h3>A Short Excerpt</h3>
                 </a>
               </div>
             </div>
@@ -263,8 +263,8 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
+    <li>Projects</li>
+    <li>Roadmap</li>
     <li>Contact</li>
     <li>Hire Me</li>
   </ul>
