--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/test4.png" alt="Welcome">
+                <img src="assets/img/intro-pic.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="/about-me.html">
