--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li><span>Hire Me</span></li>
           </ul>
         </nav>
+        <!-- home -->
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
             <div class="intro">
@@ -73,6 +74,7 @@
               </div>
             </div>
           </li>
+          <!-- projects page -->
           <li class="l-section section">
             <div class="work">
               <h2>Projects</h2>
@@ -126,11 +128,12 @@
               </div>
             </div>
           </li>
+          <!-- roadmap page -->
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
                 <h2>Roadmap</h2>
-                <a href="/shop.html">Expand
+                <a href="/roadmap.html">Expand
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -154,6 +157,7 @@
               </div>
             </div>
           </li>
+          <!-- contact page -->
           <li class="l-section section">
             <div class="contact">
               <div class="contact--lockup">
@@ -172,6 +176,7 @@
               </div>
             </div>
           </li>
+          <!-- hire me page -->
           <li class="l-section section">
             <div class="hire">
               <h2>Here you can send me information on different projects & jobs you would like me to do</h2>
@@ -261,6 +266,7 @@
       </div>
     </div>
   </div>
+  <!-- easy navigation menu link -->
   <ul class="outer-nav">
     <li class="is-active">Home</li>
     <li>Projects</li>
@@ -269,7 +275,7 @@
     <li>Hire Me</li>
   </ul>
 </div>
-
+<!-- load javascript frameworks -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
