--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
                 </a>
                 <a href="#0">
                   <h3>Why</h3>
-                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies</p>
+                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies.</p>
+                </a>
+                <a href="#0">
+                  <h3>What is 0x61</h3>
+                  <p>0x61 is the common ascii hex code for lowercase "a". You might be wondering why I chose not to use 0x41 (the corresponding value for capital A) and the answer is, simplicity.</p>
                 </a>
                 <a href="#0">
                   <h3>Important</h3>
-                  <p>Contact information and other personl information will require a password to access the password will be provided on the documents that you have received if you are authorized personnel</p>
+                  <p>Contact information and other personl information will require a password to access the password will be provided on the documents that you have received if you are authorized personnel.</p>
                 </a>
               </div>
             </div>
