--- a/index.html
+++ b/index.html
@@ -64,12 +64,8 @@
                   <p>With strong communication skills, volunteer experience, and a drive to succeed, I am seeking a challenge at a dynamic company that values and engages its employees.</p>
                 </a>
                 <a href="#0">
-                  <h3>Why</h3>
-                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies.</p>
-                </a>
-                <a href="#0">
-                  <h3>What is 0x61</h3>
-                  <p>0x61 is the common ascii hex code for lowercase "a". You might be wondering why I chose not to use 0x41 (the corresponding value for capital A) and the answer is, simplicity.</p>
+                  <h3>Why and what is 0x61</h3>
+                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies. 0x61 is the common ascii hex code for lowercase "a". You might be wondering why I chose not to use 0x41 (the corresponding value for capital A) and the answer is, simplicity.</p>
                 </a>
                 <a href="#0">
                   <h3>Important</h3>
