--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </a>
                 <a href="#0">
                   <h3>Why and what is 0x61</h3>
-                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies. 0x61 is the common ascii hex code for lowercase "a". You might be wondering why I chose not to use 0x41 (the corresponding value for capital A) and the answer is, simplicity.</p>
+                  <p>Opportunity and the chance to demonstrate some of my self acquired skills and hobbies. 0x61 is the common ascii hex code for lowercase "a". You might be wondering why I chose not to use 0x41 (the corresponding value for capital "A") and the answer is, simplicity.</p>
                 </a>
                 <a href="#0">
                   <h3>Important</h3>
