--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Me">
+                <img src="https://cdn.iconscout.com/icon/free/png-256/ux-roadmap-3052276-2560289.png" alt="About Me">
               </div>
               <div class="about--options">
                 <a href="#0">
